# libragephoto

./: .gitattributes  CMakeLists.txt  README.md
.ci/: ubuntu_install.sh
.github/workflows/: dotnet.yml  ubuntu-c.yml  ubuntu-cxx.yml  ubuntu.yml  webassembly-c.yml  webassembly-cxx.yml  webassembly.yml  windows-c.yml  windows-cxx.yml  windows-dotnet.yml  windows.yml
cmake/: cxxstd.cmake  unicode.cmake  wasm.cmake
doc/: CMakeLists.txt  Doxyfile.in  build.doc  build.dox  index.doc  index.dox  usage.doc  usage.dox
examples/ragephoto-gtkviewer/: CMakeLists.txt
examples/ragephoto-gtkviewer/src/: PhotoViewer.cpp  PhotoViewer.h  main.cpp
examples/ragephoto-qtviewer/: CMakeLists.txt
examples/ragephoto-qtviewer/src/: main.cpp
src/: RagePhoto  RagePhoto-Extract.c  RagePhoto-Extract.cpp  RagePhoto.c  RagePhoto.cpp  RagePhoto.h  RagePhoto.hpp  RagePhotoA  RagePhotoA.h  RagePhotoA.hpp  RagePhotoB.hpp  RagePhotoC.h  RagePhotoConfig.h.in  RagePhotoData.h  RagePhotoLibrary.h  RagePhotoTypedefs.h  libragephoto_data.h  libragephoto_global.h  libragephoto_global.h.in  ragephoto.pc.in  ragephoto.rc.in
src/core/: RagePhoto.c  RagePhoto.cpp  RagePhoto.h  RagePhoto.hpp  RagePhotoB  RagePhotoConfig.h.in  RagePhotoLibrary.h  RagePhotoTypedefs.h  ragephoto.pc.in  ragephoto.rc.in  ragephoto_c  ragephoto_c.hpp  ragephoto_cxx  ragephoto_cxx.hpp
src/dotnet/: .editorconfig  README.md  RagePhoto.Core.csproj  RagePhoto.Core.sln  RagePhoto.Core.targets  RagePhoto.cs  RagePhotoData.cs  RagePhotoException.cs  RagePhotoTypes.cs  Syping.RagePhoto.Core.csproj  Syping.RagePhoto.Core.sln  Syping.RagePhoto.Core.targets
src/dotnet/net47/: RagePhoto.Core.targets
src/extract/: RagePhoto-Extract.c  RagePhoto-Extract.cpp  ragephoto-extract.rc.in
src/python/: __init__.py  __version__.py.in  libragephoto.py  libragephoto_loader.py  pyproject.toml.in  ragephoto.py  setup.py.in
tests/: CodecvtTest.cpp  IconvTest.c  IconvTest.cpp  WincvtTest.c  WincvtTest.cpp
